
[build-dependencies]

  [build-dependencies.tauri-build]
    features = []
    version = "1.5"

[dependencies]
  chrono = "0.4.31"
  log = "0.4.20"
  pretty_env_logger = "0.5.0"
  serde_json = "1.0"
  sys-info = "0.9.1"
  thiserror = "1.0.49"

  [dependencies.futures]
    default-features = false
    version = "0.3.28"

  [dependencies.reqwest]
    features = ["json", "blocking"]
    version = "0.11"

  [dependencies.serde]
    features = ["derive"]
    version = "1.0"

  [dependencies.tauri]
    features = ["updater", "system-tray", "process-exit", "dialog-all", "path-all", "shell-all"]
    version = "1.5"

  [dependencies.tokio]
    features = ["process"]
    version = "1.33"

[features]
  custom-protocol = ["tauri/custom-protocol"]

[package]
  authors = ["you"]
  description = "A Tauri App"
  edition = "2021"
  license = ""
  name = "prem-app"
  repository = ""
  version = "0.1.1"
