
[build-dependencies]

  [build-dependencies.tauri-build]
    features = []
    version = "1.5"

[dependencies]
  chrono = "0.4.31"
  ctrlc = "3.4.1"
  log = "0.4.20"
  pretty_env_logger = "0.5.0"
  sentry-tauri = "0.2"
  serde_json = "1.0"
  sys-info = "0.9.1"
  sysinfo = "0.29.10"
  thiserror = "1.0.49"

  [dependencies.futures]
    default-features = false
    version = "0.3.28"

  [dependencies.reqwest]
    features = ["json", "blocking"]
    version = "0.11"

  [dependencies.serde]
    features = ["derive"]
    version = "1.0"

  [dependencies.tauri]
    features = ["shell-all", "updater", "system-tray", "process-exit", "dialog-all", "path-all", "process-command-api"]
    version = "1.5"

  [dependencies.tauri-plugin-store]
    branch = "v1"
    git = "https://github.com/tauri-apps/plugins-workspace"

  [dependencies.tokio]
    features = ["process"]
    version = "1.33"

[features]
  custom-protocol = ["tauri/custom-protocol"]

[package]
  authors = ["you"]
  description = "A Tauri App"
  edition = "2021"
  license = ""
  name = "prem-app"
  repository = ""
  version = "0.2.2"
